samples/_failures_safe/1761626416_2fe19e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f98b6de3.c: In function ‘peek_token’:
./samples/SAFE/__tmp_f98b6de3.c:158: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_f98b6de3.c:157:5: error: expected declaration or statement at end of input
  157 |     if
      |     ^~
